kubernetes/process-configuration-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: process-configuration
  labels:
    app: process-configuration
spec:
  containers:
  - name: process-configuration
    image: local-process-configuration:1.0.0
    ports:
    - containerPort: 5000
