kubernetes/process-configuration-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: process-configuration
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  selector:
    app: process-configuration
