kubernetes/translations-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: translations
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  selector:
    app: translations
